--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-recursive-exclude playbooks *.yaml
-recursive-include .git *
+recursive-include playbooks *.yaml
+recursive-exclude .git *
 include README.md
